--- a/product/roundhouse.console/roundhouse.tool.nuspec
+++ b/product/roundhouse.console/roundhouse.tool.nuspec
@@ -21,6 +21,6 @@
     <iconUrl>https://raw.github.com/chucknorris/roundhouse/master/nuget/RoundhousE_Logo.NuGet.jpg</iconUrl>
   </metadata>
   <files>
-    <file src="bin\netcoreapp2.1\**\**" target="tools\netcoreapp2.1\any" />
+    <file src="bin\netcoreapp2.1\publish\**\**" target="tools\netcoreapp2.1\any" />
   </files>
 </package>
