--- a/product/roundhouse.lib.merged/roundhouse.lib.merged.csproj
+++ b/product/roundhouse.lib.merged/roundhouse.lib.merged.csproj
@@ -73,6 +73,12 @@
       <Link>roundhouse.ico</Link>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="../../generated/MySql.Data/keywords.txt" Link="$(AssemblyName).keywords.txt" >
+      <LogicalName>$(AssemblyName).keywords.txt</LogicalName>
+    </EmbeddedResource>
+  </ItemGroup>
+  
   
   <!-- Merge properties and target -->
   <PropertyGroup>
