--- a/product/roundhouse.databases.sqlite/roundhouse.databases.sqlite.csproj
+++ b/product/roundhouse.databases.sqlite/roundhouse.databases.sqlite.csproj
@@ -53,12 +53,12 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="$(NuGetPackageRoot)System.Data.SQLite.Core\1.0.109.2\lib\net46\System.Data.SQLite.dll">
+    <EmbeddedResource Include="$(NuGetPackageRoot)system.data.sqlite.core\1.0.109.2\lib\$(TargetFramework)\System.Data.SQLite.dll">
       <Link>assemblyresource\System.Data.SQLite.dll</Link>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <AlreadyImported>true</AlreadyImported>
   </PropertyGroup>
-  <Import Project="$(NuGetPackageRoot)System.Data.SQLite.Core\1.0.109.2\build\net46\System.Data.SQLite.Core.targets" Condition="Exists('$(NuGetPackageRoot)System.Data.SQLite.Core\1.0.109.2\build\net46\System.Data.SQLite.Core.targets') and '$(AlreadyImported)' != 'true'" />
+  <Import Project="$(NuGetPackageRoot)system.data.sqlite.core\1.0.109.2\build\net46\System.Data.SQLite.Core.targets" Condition="Exists('$(NuGetPackageRoot)system.data.sqlite.core\1.0.109.2\build\net46\System.Data.SQLite.Core.targets') and '$(AlreadyImported)' != 'true'" />
 </Project>
