--- a/product/roundhouse.console/roundhouse.console.csproj
+++ b/product/roundhouse.console/roundhouse.console.csproj
@@ -45,7 +45,12 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Costura.Fody" Version="3.3.2" />
     <PackageReference Include="FluentNHibernate" Version="2.1.2" />
+    <PackageReference Include="Fody" Version="3.3.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Iesi.Collections" Version="4.0.4" />
     <PackageReference Include="Microsoft.Build.Framework" Version="15.9.20" />
     <PackageReference Include="MySql.Data" Version="8.0.13" />
@@ -57,6 +62,7 @@
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.5.1" />
     <PackageReference Include="System.Security.Principal.Windows" Version="4.5.1" />
+    <PackageReference Include="ILRepack" Version="2.0.16" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'net461'">
     <ProjectReference Include="..\roundhouse.databases.access\roundhouse.databases.access.csproj" />
@@ -87,31 +93,24 @@
     <None Include="rh.bat" CopyToOutputDirectory="PreserveNewest" />
     <None Include="DotnetToolSettings.xml" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
-  
-  <!-- Merge properties and target -->
-    <!--
+
   <PropertyGroup>
-    <ILMergeDir>..\..\code_drop\merge\</ILMergeDir>
-    <LogDir>..\..\code_drop\log\</LogDir>
-    <ILMergeTarget>$(ILMergeDir)$(AssemblyName).exe</ILMergeTarget>
+    <DropDir>..\..\code_drop\merge\</DropDir>
+    <Extension>.dll</Extension>
   </PropertyGroup>
-  <Target Name="ILMerge" AfterTargets="Build" Condition="'$(BuildingInsideVisualStudio)' != 'true' and '$(TargetFramework)' == 'net461'">
-    <ItemGroup>
-      <ILMergeAssemblies Include="$(OutputPath)*.dll" />
-    </ItemGroup>
-    <PropertyGroup>
-      <IgnoreFile>..\..\build.custom\ilmerge.internalize.ignore.txt</IgnoreFile>
-      <ILMerge>..\..\lib\ILMerge\ILMerge.exe</ILMerge>
-      <ILMergeLog>$(LogDir)roundhouse.console.ILMerge.log</ILMergeLog>
-      <ILMergeSource>$(OutputPath)$(AssemblyName).exe</ILMergeSource>
-      <ILMergeCommand>$(ILMerge) /internalize:$(IgnoreFile) /target:exe /out:$(ILMergeTarget) /log:$(ILMergeLog) /ndebug /zeroPeKind /allowDup $(ILMergeSource)  @(ILMergeAssemblies, ' ')</ILMergeCommand>
-    </PropertyGroup>
-    <Delete Files="$(ILMergeLog);$(ILMergeTarget)" Condition="Exists($(ILMergeDir))" />
-    <MakeDir Directories="$(ILMergeDir)" />
-    <Message Importance="high" Text="ILMerge-ing into $(ILMergeTarget)" />
-    <Exec Command="$(ILMergeCommand)" />
+
+  <PropertyGroup Condition="'$(TargetFramework)' == 'net461'">
+    <Extension>.exe</Extension>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <ILMergeTarget>$(ILMergeDir)$(AssemblyName)$(Extension)</ILMergeTarget>
+  </PropertyGroup>
+
+  <Target Name="CopyOutput" AfterTargets="Build" Condition="'$(BuildingInsideVisualStudio)' != 'true' and '$(TargetFramework)' == 'net461'">
+    <Copy SourceFiles="$(ILMergeTarget" DestinationFolder="$(DropDir)" />
   </Target>
-  -->
+ 
     
   <!-- Nuspec properties (for generating NuGet package) -->
   <PropertyGroup Condition="'$(TargetFramework)' == 'net461'">
