--- a/product/roundhouse.lib.merged/roundhouse.lib.nuspec
+++ b/product/roundhouse.lib.merged/roundhouse.lib.nuspec
@@ -15,11 +15,21 @@
     <dependencies>
       <dependency id="FluentNHibernate" version="2.1.2" />
       <dependency id="Iesi.Collections" version="4.0.4" />
+      <dependency id="log4net" version="2.0.8" />
+      <dependency id="Newtonsoft.Json" version="10.0.3" />
+      <dependency id="Polly" version="6.1.2" />
       <dependency id="NHibernate" version="5.1.3" />
-      <dependency id="NHibernate.JetDriver" version="2.0.0.1002" />
+      <dependency id="System.Data.Common" version="4.3.0" />
+      <dependency id="System.Data.SqlClient" version="4.5.1" />
+      <dependency id="System.Security.Principal.Windows" version="4.5.1" />
+      <dependency id="Mysql.Data" version="8.0.13" />
+      <dependency id="System.Configuration.ConfigurationManager" version="4.5.0" />
       <dependency id="Npgsql" version="3.2.7" />
+      <dependency id="System.Linq" version="4.3.0" />
+      <dependency id="EntityFramework" version="6.2.0" />
       <dependency id="System.Data.SQLite.Core" version="1.0.109.2" />
       <dependency id="Microsoft.SqlServer.Compact" version="4.0.8876.1" />
+      <dependency id="NHibernate.JetDriver" version="2.0.0.1002" />
     </dependencies>
 	<iconUrl>https://raw.github.com/chucknorris/roundhouse/master/nuget/RoundhousE_Logo.NuGet.jpg</iconUrl>
   </metadata>
