Changes in build and tests to improve non-Windows builds
 * Added _WINDOWS ifdef variable
 * Run tests for both net461 and netcore2.1
 * Added PackageReference to Microsoft.NETFramework.ReferenceAssemblies
   to be able to build on non-Windows platforms
 * A bit more of #ifdefs on NET461 and _WINDOWS to avoid failing tests on non-Windows
 * Some small adjustments to build.ps1

--- a/product/roundhouse.console/roundhouse.console.csproj
+++ b/product/roundhouse.console/roundhouse.console.csproj
@@ -55,6 +55,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 
