--- a/product/roundhouse.tasks/roundhouse.tasks.csproj
+++ b/product/roundhouse.tasks/roundhouse.tasks.csproj
@@ -67,6 +67,10 @@
     <PackageReference Include="NHibernate" Version="5.2.5" />
     <PackageReference Include="log4net" Version="2.0.8.0" />
     <PackageReference Include="NHibernate.JetDriver" Version="2.0.0.1002" />
+    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="samples.xml">
