--- a/product/roundhouse.console/roundhouse.tool.nuspec
+++ b/product/roundhouse.console/roundhouse.tool.nuspec
@@ -16,12 +16,12 @@
       <packageType name="DotnetTool" />
     </packageTypes>
     <dependencies>
-      <group targetFramework=".NETCoreApp2.1" />
+      <group targetFramework=".netcoreapp3.1" />
     </dependencies>
     <icon>images/RoundhousE_Logo.NuGet.jpg</icon>
   </metadata>
   <files>
-    <file src="bin/netcoreapp2.1/publish/**/**" target="tools/netcoreapp2.1/any" />
+    <file src="bin/netcoreapp3.1/publish/**/**" target="tools/netcoreapp3.1/any" />
     <file src="../../nuget/RoundhousE_Logo.NuGet.jpg" target="images/" />
   </files>
 </package>
